<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="xyz.dokup.regulartimescouter.viewmodel.SettingActivityViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings"
            app:popupTheme="@style/My.Toolbar"
            android:elevation="4dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/regular_time"
                android:gravity="end"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="19:00"
                android:gravity="start"
                android:layout_marginStart="@dimen/margin_small"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/change_regular_time"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:background="@drawable/primary_5dp_rounded_corner"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:onClick="@{viewModel::onClickRegularTimeChangeButton}"/>

    </LinearLayout>
</layout>